--- a/app.css
+++ b/app.css
@@ -21,5 +21,5 @@ a:hover {
 .selfie-video{
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
-  object-fit: cover;
+  /* object-fit: cover; */
 }
