--- a/app.css
+++ b/app.css
@@ -18,6 +18,12 @@ a:hover {
 }
 
 
+.container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .selfie-video{
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
